--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1602,4 +1602,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="click_to_upload_the_video">વિડીયો અપલોડ કરવા ક્લિક કરો </string>
   <string name="choose_interesting_title">જોનારનું ધ્યાન આકર્ષિત કરવા રસપ્રદ શીર્ષક વાપરો </string>
   <string name="coachmark_story_3">આ થયા પછી, તમારી પ્રથમ ૧૦૦ શબ્દોની વાર્તા પ્રકાશિત કરો </string>
+  <string name="coachmark_read">શ્રેષ્ઠ બ્લોગ્સ, વી લોગ્સ અને 100શબ્દોની વાર્તા શોધો. </string>
+  <string name="coachmark_mymoney">કેમપેન માટે અરજી કરો, જરૂરિયાત પૂરી કરો અને કમાણી કરો. </string>
+  <string name="coachmark_vlogs_1">આવો તમને તમારો પ્રથમ વી લોગ  બનાવવામાં મદદ કરીએ ! શરૂઆત કરવા કોઈ પણ ચેલેન્જ અથવા શ્રેણી પસંદ કરો </string>
+  <string name="tags_help_discover">ટેગ દ્વારા, જોનાર ને વિડીયો સહેલાઈ થી મળી રહે છે </string>
 </resources>
