--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -1486,12 +1486,12 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="rank_same">ರಚಿಸಿ ಮತ್ತು ಹಂಚಿರಿ..ನಿಮ್ಮ ಸ್ಥಾನವನ್ನು ಮೇಲ್ದರ್ಜೆಗೆ ಏರಿಸಿ</string>
   <string name="blogger_gold_about_text1">मॉम्सप्रेस्सो 10 साल का हो गया है! यह सफ़र एक अद्भुत सफ़र रहा है और हम इस विशेष दिन को मनाने के लिए कुछ बड़ा और अनोखा करना चाहते थे. आप भी उत्साहित हैं न ? होना भी चाहिए क्योंकि हमारे 10th बर्थडे बोनांजा के मासिक उत्सव के अवसर पर आप हो सकते हैं 5 लाख रुपयों तक के हकदार!</string>
   <string name="blogger_gold_about_text2">ಹಾಗಾದರೆ ನೀವೇನು ಮಾಡಬೇಕು?</string>
-  <string name="blogger_gold_about_text3">ಹಂಚಿರಿ : ನಿಮ್ಮ ಬ್ಲಾಗ್ ಮತ್ತು ವ್ಲೋಗ್ ಗಳ ವೀಕ್ಷಣೆಗಳನ್ನು ಹೆಚ್ಚಿಸಲು ನಿಮ್ಮ ಕುಟುಂಬದವರ ಜೊತೆ, ಸ್ನೇಹಿತರ ಜೊತೆ ಸೋಶಿಯಲ್ ಮಿಡಿಯಾಗಳಲ್ಲಿ ಹಂಚಿಕೊಳ್ಳಿ. ವೀಕ್ಷಣೆಗಳ ಸಂಖ್ಯೆಯನ್ನು ಹೆಚ್ಚಿಸಲು ನೀವು ಈ ಮುಂಚೆ ರಚಿಸಿರುವ ಬ್ಲಾಗ್ ಮತ್ತು ವ್ಲೋಗ್ ಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಬಹುದು. 10 ಅಕ್ಟೋಬರ್ ಮತ್ತು 20 ನವೆಂಬರ್ 2020 ರ ನಡುವೆ ಆರ್ಗಾನಿಕ್ ಪೇಜ್ ವೀಕ್ಷಣೆಗಳನ್ನು ನಾವು ಪರಿಗಣಿಸುತ್ತೇವೆ.</string>
-  <string name="blogger_gold_about_text4">Share your blogs and vlogs with your network of friends, family and social groups to get ORGANIC PAGE VIEWS between 10th Oct and 20th Nov 2020. You can also reshare your blogs and vlogs published before the 10th of Oct, 2020 to increase these organic views.</string>
-  <string name="blogger_gold_about_text5">Earn a share of the 5 Lakhs, based on YOUR contribution to the TOTAL organic page views on Momspresso.</string>
-  <string name="blogger_gold_about_text6">It’s that simple. The higher the number of organic views of your blogs/vlogs, the higher YOUR share of the 5 Lakhs you will receive! </string>
-  <string name="blogger_gold_about_text7">Click here to know more</string>
-  <string name="blogger_gold_about_text8">Ready to start celebrating? What are you waiting for? Start to CREATE. SHARE. EARN now! </string>
+  <string name="blogger_gold_about_text3">ರಚಿಸಿ: ನೀವಿನ್ನೂ ಮಾಮ್ಸ್ ಪ್ರೆಸೊ ವೇದಿಕೆಯಲ್ಲಿ ಬ್ಲಾಗ್ ಮತ್ತು ವ್ಲೋಗ್ ಗಳನ್ನು ರಚಿಸಿಲ್ಲದಿದ್ದರೆ ಈಗಲೇ ಆರಂಭಿಸಿ.</string>
+  <string name="blogger_gold_about_text4">ಹಂಚಿರಿ : ನಿಮ್ಮ ಬ್ಲಾಗ್ ಮತ್ತು ವ್ಲೋಗ್ ಗಳ ವೀಕ್ಷಣೆಗಳನ್ನು ಹೆಚ್ಚಿಸಲು ನಿಮ್ಮ ಕುಟುಂಬದವರ ಜೊತೆ, ಸ್ನೇಹಿತರ ಜೊತೆ ಸೋಶಿಯಲ್ ಮಿಡಿಯಾಗಳಲ್ಲಿ ಹಂಚಿಕೊಳ್ಳಿ. ವೀಕ್ಷಣೆಗಳ ಸಂಖ್ಯೆಯನ್ನು ಹೆಚ್ಚಿಸಲು ನೀವು ಈ ಮುಂಚೆ ರಚಿಸಿರುವ ಬ್ಲಾಗ್ ಮತ್ತು ವ್ಲೋಗ್ ಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಬಹುದು. 10 ಅಕ್ಟೋಬರ್ ಮತ್ತು 20 ನವೆಂಬರ್ 2020 ರ ನಡುವೆ ಆರ್ಗಾನಿಕ್ ಪೇಜ್ ವೀಕ್ಷಣೆಗಳನ್ನು ನಾವು ಪರಿಗಣಿಸುತ್ತೇವೆ.</string>
+  <string name="blogger_gold_about_text5">ಗಳಿಸಿರಿ: ಮೇಲೆ ವಿವರಿಸಲಾಗಿರುವ ಉದಾಹರಣೆಗೆ ಅನುಗುಣವಾಗಿ ಮಾಮ್ಸ್ ಪ್ರೆಸೊಗೆ ದೊರೆಯುವ ಒಟ್ಟು ವೀಕ್ಷಣೆಗಳಲ್ಲಿ ನಿಮ್ಮ ಅನುದಾನಕ್ಕೆ ತಕ್ಕ ಮೊತ್ತವನ್ನು ನೀವು ಗೆಲ್ಲಬಹುದು.</string>
+  <string name="blogger_gold_about_text6">ಇದು ತುಂಬಾ ಸರಳವಾಗಿದೆ. ನಿಮ್ಮ ಬ್ಲಾಗ್‌ಗಳು / ವ್ಲಾಗ್‌ಗಳ ಆರ್ಗ್ಯಾನಿಕ್ ವೀಕ್ಷಣೆಗಳ ಸಂಖ್ಯೆ ಎಷ್ಟು ಹೆಚ್ಚಿಗೆ ಇರುತ್ತದೆಯೋ, ನೀವು ಸ್ವೀಕರಿಸುವ 5 ಲಕ್ಷಗಳಲ್ಲಿ ನಿಮ್ಮ ಪಾಲು ಅದರ ಅನುಗುಣವಾಗಿ ಹಂಚಲ್ಪಡುತ್ತದೆ!</string>
+  <string name="blogger_gold_about_text7">ಇನ್ನಷ್ಟು ತಿಳಿಯಲು ಇಲ್ಲಿ ಕ್ಲಿಕ್ ಮಾಡಿ</string>
+  <string name="blogger_gold_about_text8">ಹತ್ತನೇ ವರ್ಷಾಚರಣೆಯನ್ನು ಆಚರಿಸಲು ನೀವು ಸಿದ್ಧರಿದ್ದೀರಾ? ಯಾವುದಕ್ಕಾಗಿ ನೀನು ಕಾಯುತ್ತಿರುವಿರಿ? ಈಗಲೇ ರಚಿಸಲು ಪ್ರಾರಂಭಿಸಿ. ಹಂಚಿಕೊಳ್ಳಿ. ಮತ್ತು ಸಂಪಾದಿಸಿ!</string>
   <string name="lang_sel_express_yourself">10 ಭಾಷೆಗಳಲ್ಲಿ ನಿಮ್ಮ ಭಾವನೆಗಳನ್ನು ವ್ಯಕ್ತಪಡಿಸಬಹುದು</string>
   <string name="select_language">ನಿಮ್ಮ ಭಾಷೆಯನ್ನು ಆಯ್ಕೆ ಮಾಡಿ</string>
   <string name="login_or_sign_up">ಲಾಗ್ ಇನ್ / ಸೈನ್ ಅಪ್</string>
@@ -1530,4 +1530,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="click_to_upload_the_video">ವೀಡಿಯೋ ಅಪ್ ಲೋಡ್ ಮಾಡಲು ಕ್ಲಿಕ್ ಮಾಡಿ</string>
   <string name="choose_interesting_title">ಒಂದು ಆಕರ್ಷಕವಾದ ಶೀರ್ಷಿಕೆ ಬಳಸಿ ನೋಡುಗರ ಗಮನ ಸೆಳೆಯಿರಿ</string>
   <string name="coachmark_story_3">ಮುಗಿದಿದೆ. ಈಗ ನಿಮ್ಮ 100 ಶಬ್ದದ ಕಥೆಯನ್ನು ಪ್ರಕಟಿಸಿ</string>
+  <string name="coachmark_read">ಅತ್ಯುತ್ತಮವಾದ ಬ್ಲಾಗ್‌ಗಳು, ವ್ಲಾಗ್‌ಗಳು ಮತ್ತು 100 ಪದ ಕಥೆಗಳನ್ನು ಅನ್ವೇಷಿಸಿ.</string>
+  <string name="coachmark_mymoney"> ಕ್ಯಾಂಪೇನ್ ನಲ್ಲಿ ಭಾಗವಹಿಸಲು ಅರ್ಜಿ ಸಲ್ಲಿಸಿ, ಅವಶ್ಯಕತೆಗಳನ್ನು ಪೂರ್ಣಗೊಳಿಸಿ ಮತ್ತು ಹಣವನ್ನು ಸಂಪಾದಿಸಿ!</string>
+  <string name="coachmark_vlogs_1">ನಾವು ನಿಮ್ಮ ಮೊದಲ ವ್ಲೋಗ್ ರಚಿಸಲು ಸಹಾಯ ಮಾಡುತ್ತೇವೆ. ಒಂದು ಕೆಟಗರಿ ಆಯ್ಕೆ ಮಾಡಿಕೊಳ್ಳಿ,  ಅಥವಾ ಸವಾಲನ್ನು ಆಯ್ಕೆ ಮಾಡಿ </string>
+  <string name="tags_help_discover">ಟ್ಯಾಗ್ ಗಳು ನೋಡುಗರಿಗೆ ವೀಡಿಯೋ ಹುಡುಕಲು ಸಹಾಯ ಮಾಡುತ್ತದೆ</string>
 </resources>
