--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1534,4 +1534,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="click_to_upload_the_video">വീഡിയോ അപ്‌ലോഡുചെയ്യാൻ ഇവിടെ ക്ലിക്കുചെയ്യുക</string>
   <string name="choose_interesting_title">കാഴ്ചക്കാരന്റെ ശ്രദ്ധ പിടിച്ചുപറ്റാൻ രസകരമായ ഒരു ശീർഷകം ഉപയോഗിക്കുക</string>
   <string name="coachmark_story_3">ഫോർമാറ്റിങ് പൂർത്തിയായാൽ, നിങ്ങളുടെ ആദ്യത്തെ #100വാക്കിലൊരുകഥ പ്രസിദ്ധീകരിക്കുക!</string>
+  <string name="coachmark_read">മികച്ച ബ്ലോഗുകൾ, വ്ലോഗുകൾ, 100 വാക്ക് കഥകൾ എന്നിവ പരിശോധിക്കുക.</string>
+  <string name="coachmark_mymoney">കാമ്പെയ്‌നുകൾക്കായി അപേക്ഷിക്കുക, ആവശ്യകതകൾ പൂർത്തിയാക്കുക, പണം സമ്പാദിക്കുക!</string>
+  <string name="coachmark_vlogs_1">നിങ്ങളുടെ ആദ്യ വ്ലോഗ് സൃഷ്ടിക്കാൻ ഞങ്ങൾ സഹായിക്കാം! ഒരു വെല്ലുവിളി അല്ലെങ്കിൽ വിഭാഗം തിരഞ്ഞെടുത്ത് ആരംഭിക്കാം.</string>
+  <string name="tags_help_discover">വീഡിയോകൾ എളുപ്പത്തിൽ കണ്ടെത്താൻ ടാഗുകൾ കാഴ്ചക്കാരെ സഹായിക്കുന്നു</string>
 </resources>
