--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1551,4 +1551,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="click_to_upload_the_video">ਵੀਡੀਓ ਨੂੰ ਅਪਲੋਡ ਕਰਨ ਲਈ ਕਲਿੱਕ ਕਰੋ</string>
   <string name="choose_interesting_title">ਦਰਸ਼ਕਾਂ ਦਾ ਧਿਆਨ ਖਿੱਚਣ ਲਈ ਇਕ ਦਿਲਚਸਪ ਟਾਈਟਲ ਲਿਖੋ</string>
   <string name="coachmark_story_3">ਇਹ ਹੋ ਜਾਣ ਤੋਂ ਬਾਅਦ, ਆਪਣੀ ਪਹਿਲੀ 100 ਸ਼ਬਦਾਂ ਦੀ ਕਹਾਣੀ ਪ੍ਰਕਾਸ਼ਤ ਕਰੋ</string>
+  <string name="coachmark_read">ਸਰਬੋਤਮ ਬਲੌਗਸ, ਵੀ-ਲੌਗਜ਼ ਅਤੇ 100 ਸ਼ਬਦਾਂ ਦੀਆਂ ਕਹਾਣੀਆਂ ਦੀ ਪੜਚੋਲ ਕਰੋ</string>
+  <string name="coachmark_mymoney">ਕੇਂਪੇਨ ਲਈ ਅਰਜ਼ੀ ਦਿਓ, ਜ਼ਰੂਰਤਾਂ ਪੂਰੀਆਂ ਕਰੋ ਅਤੇ ਪੈਸਾ ਕਮਾਓ!</string>
+  <string name="coachmark_vlogs_1">ਆਓ ਤੁਹਾਡਾ ਪਹਿਲਾ ਵੀ-ਲੌਗ ਬਣਾਉਣ ਵਿੱਚ ਤੁਹਾਡੀ ਮਦਦ ਕਰੀਏ! ਸ਼ੁਰੂ ਕਰਨ ਲਈ ਇੱਕ ਚੁਣੌਤੀ ਜਾਂ ਕੈਟੇਗਰੀ ਦੀ ਚੋਣ ਕਰੋ </string>
+  <string name="tags_help_discover">ਟੈਗਸ ਦਰਸ਼ਕਾਂ ਨੂੰ ਅਸਾਨੀ ਨਾਲ ਵੀਡੀਓ ਲੱਭਣ ਵਿੱਚ ਸਹਾਇਤਾ ਕਰਦੇ ਹਨ</string>
 </resources>
