--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1486,4 +1486,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="click_to_upload_the_video">காணொளியை பதிவேற்ற இங்கே க்ளிக் செய்யுங்கள் </string>
   <string name="choose_interesting_title">கவர்ச்சியான தலைப்பு  பார்வையாளர் கவனத்தை ஈர்க்கும் </string>
   <string name="coachmark_story_3">முடிந்த பின், 100 வார்த்தை கதையை வெளியிட.</string>
+  <string name="coachmark_read">சிறந்த வலைப்பதிவுகள், விலாக்கள் மற்றும் 100 வார்த்தைக் கதைகளை ஆராயுங்கள் </string>
+  <string name="coachmark_mymoney">பிரச்சாரங்களுக்கு  விண்ணப்பியுங்கள், அதன் தேவைகளை  பூர்த்தி செய்து , பணம் ஈட்டுங்கள்!</string>
+  <string name="coachmark_vlogs_1">உங்கள் முதல் விலாக் ஐ உருவாக்க உதவி செய்கிறோம். சவாலை தேர்ந்தெடுத்து  காணொளியை பதிவேற்றுங்கள்( அ ) வகையை தேர்ந்தெடுத்து தொடங்குங்கள்.</string>
+  <string name="tags_help_discover">டேக் செய்வதினால் உங்களின் காணொளியை பார்வையாளரிடம் கொண்டு சேர்க்கலாம்</string>
 </resources>
