--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -1484,7 +1484,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="rank_up">ಎಸ್.. ನೀವು %1$d ನಿನ್ನೆಗಿಂತ ಮೇಲಿನ ಸ್ಥಾನಕ್ಕೇರಿದ್ದೀರಿ</string>
   <string name="rank_down">ನೀವು ರಚಿಸಿದ್ದು %1$d ಸ್ಥಾನ! ರಚಿಸಿ. ಹಂಚಿರಿ. ಮತ್ತು ನಿಮ್ಮ ಸ್ಥಾನವನ್ನು ಮೇಲ್ದರ್ಜೆಗೆ ಏರಿಸಿ</string>
   <string name="rank_same">ರಚಿಸಿ ಮತ್ತು ಹಂಚಿರಿ..ನಿಮ್ಮ ಸ್ಥಾನವನ್ನು ಮೇಲ್ದರ್ಜೆಗೆ ಏರಿಸಿ</string>
-  <string name="blogger_gold_about_text1">मॉम्सप्रेस्सो 10 साल का हो गया है! यह सफ़र एक अद्भुत सफ़र रहा है और हम इस विशेष दिन को मनाने के लिए कुछ बड़ा और अनोखा करना चाहते थे. आप भी उत्साहित हैं न ? होना भी चाहिए क्योंकि हमारे 10th बर्थडे बोनांजा के मासिक उत्सव के अवसर पर आप हो सकते हैं 5 लाख रुपयों तक के हकदार!</string>
+  <string name="blogger_gold_about_text1">ಈ ಹತ್ತನೇ ವರ್ಷಾಚರಣೆಯನ್ನು ನಾವು ಸಂಭ್ರಮಿಸಲು ಬಯಸುತ್ತೇವೆ.. ನಿಮ್ಮ ಜೊತೆಗೆ! ನೀವು ಗೆಲ್ಲಬಹುದು 5 ಲಕ್ಷಗಳು!</string>
   <string name="blogger_gold_about_text2">ಹಾಗಾದರೆ ನೀವೇನು ಮಾಡಬೇಕು?</string>
   <string name="blogger_gold_about_text3">ರಚಿಸಿ: ನೀವಿನ್ನೂ ಮಾಮ್ಸ್ ಪ್ರೆಸೊ ವೇದಿಕೆಯಲ್ಲಿ ಬ್ಲಾಗ್ ಮತ್ತು ವ್ಲೋಗ್ ಗಳನ್ನು ರಚಿಸಿಲ್ಲದಿದ್ದರೆ ಈಗಲೇ ಆರಂಭಿಸಿ.</string>
   <string name="blogger_gold_about_text4">ಹಂಚಿರಿ : ನಿಮ್ಮ ಬ್ಲಾಗ್ ಮತ್ತು ವ್ಲೋಗ್ ಗಳ ವೀಕ್ಷಣೆಗಳನ್ನು ಹೆಚ್ಚಿಸಲು ನಿಮ್ಮ ಕುಟುಂಬದವರ ಜೊತೆ, ಸ್ನೇಹಿತರ ಜೊತೆ ಸೋಶಿಯಲ್ ಮಿಡಿಯಾಗಳಲ್ಲಿ ಹಂಚಿಕೊಳ್ಳಿ. ವೀಕ್ಷಣೆಗಳ ಸಂಖ್ಯೆಯನ್ನು ಹೆಚ್ಚಿಸಲು ನೀವು ಈ ಮುಂಚೆ ರಚಿಸಿರುವ ಬ್ಲಾಗ್ ಮತ್ತು ವ್ಲೋಗ್ ಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಬಹುದು. 10 ಅಕ್ಟೋಬರ್ ಮತ್ತು 20 ನವೆಂಬರ್ 2020 ರ ನಡುವೆ ಆರ್ಗಾನಿಕ್ ಪೇಜ್ ವೀಕ್ಷಣೆಗಳನ್ನು ನಾವು ಪರಿಗಣಿಸುತ್ತೇವೆ.</string>
@@ -1534,4 +1534,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="coachmark_mymoney"> ಕ್ಯಾಂಪೇನ್ ನಲ್ಲಿ ಭಾಗವಹಿಸಲು ಅರ್ಜಿ ಸಲ್ಲಿಸಿ, ಅವಶ್ಯಕತೆಗಳನ್ನು ಪೂರ್ಣಗೊಳಿಸಿ ಮತ್ತು ಹಣವನ್ನು ಸಂಪಾದಿಸಿ!</string>
   <string name="coachmark_vlogs_1">ನಾವು ನಿಮ್ಮ ಮೊದಲ ವ್ಲೋಗ್ ರಚಿಸಲು ಸಹಾಯ ಮಾಡುತ್ತೇವೆ. ಒಂದು ಕೆಟಗರಿ ಆಯ್ಕೆ ಮಾಡಿಕೊಳ್ಳಿ,  ಅಥವಾ ಸವಾಲನ್ನು ಆಯ್ಕೆ ಮಾಡಿ </string>
   <string name="tags_help_discover">ಟ್ಯಾಗ್ ಗಳು ನೋಡುಗರಿಗೆ ವೀಡಿಯೋ ಹುಡುಕಲು ಸಹಾಯ ಮಾಡುತ್ತದೆ</string>
+  <string name="tooltip_liked_the_blog">ನಿಮಗೆ ಇಷ್ಟವಾದ ಲೇಖನ ರಚನೆಕಾರರನ್ನು ಹಿಂಬಾಲಿಸಿ. ಅವರಿಂದ ರಚಿಸಲ್ಪಡುವ ಎಲ್ಲಾ ಬರಹಗಳನ್ನು ಓದುವ ಅವಕಾಶ ನಿಮ್ಮದಾಗಲಿ</string>
+  <string name="coachmark_vlogs_2">ಒಂದು ಒಳ್ಳೆಯ ಮುಖಪುಟ ನಿಮ್ಮ ವೀಡಿಯೋ ವೀಕ್ಷಣೆಯನ್ನು ಹೆಚ್ಚಿಸುತ್ತದೆ</string>
+  <string name="tooltip_groups">ನೀವು ಇಷ್ಟಪಡುವ ಗುಂಪುಗಳಿಗೆ ಸೇರಿ. ಸಮುದಾಯದೊಂದಿಗೆ ಸಂವಹನ ನಡೆಸಲು ಪ್ರಾರಂಭಿಸಿ!</string>
 </resources>
