--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1510,7 +1510,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="blogger_gold_about_text3">ਮੌਮਸਪ੍ਰੈਸੋ \'ਤੇ ਇਕ ਬਲੌਗ ਜਾਂ ਵੀ-ਲੌਗ ਬਣਾਓ, ਜੇ ਤੁਸੀਂ ਹਾਲੇ ਤੱਕ ਨਹੀਂ ਬਣਾਇਆ ਹੈ। </string>
   <string name="blogger_gold_about_text4">ਆਰਗੈਨਿਕ ਪੇਜ ਵਿਊਜ਼ ਪ੍ਰਾਪਤ ਕਰਨ ਲਈ ਆਪਣੇ ਬਲੌਗਸ ਅਤੇ ਵੀ-ਲੌਗਜ਼ ਨੂੰ ਆਪਣੇ ਦੋਸਤਾਂ, ਪਰਿਵਾਰ ਅਤੇ ਸੋਸ਼ਲ ਗ੍ਰੁਪਸ ਦੇ ਨੈਟਵਰਕ ਨਾਲ ਸ਼ੇਅਰ ਕਰੋ। ਤੁਸੀਂ ਆਪਣੇ ਆਰਗੈਨਿਕ ਪੇਜ ਵਿਊਜ਼ ਨੂੰ ਵਧਾਉਣ ਲਈ ਆਪਣੇ ਪੁਰਾਣੇ ਪ੍ਰਕਾਸ਼ਤ ਬਲੌਗਸ ਅਤੇ ਵੀ-ਲੌਗਸ ਨੂੰ ਵੀ ਸ਼ੇਅਰ ਕਰ ਸਕਦੇ ਹੋ। </string>
   <string name="blogger_gold_about_text5">ਮੌਮਸਪ੍ਰੈਸੋ ਤੇ ਕੁੱਲ ਆਰਗੈਨਿਕ ਪੇਜ ਵਿਊਜ਼ ਵਿੱਚ ਤੁਹਾਡੇ ਯੋਗਦਾਨ ਦੇ ਅਧਾਰ ਤੇ ਕਮਾਈ ਕਰੋ।</string>
-  <string name="blogger_gold_about_text6">It’s that simple. The higher the number of organic views of your blogs/vlogs, the higher YOUR share of the 5 Lakhs you will receive! </string>
+  <string name="blogger_gold_about_text6">ਇਹ ਬਹੁਤ ਹੀ ਸਰਲ ਹੈ। ਤੁਹਾਡੇ ਬਲੌਗਸ ਅਤੇ ਵੀ-ਲੌਗਜ਼ ਦੇ ਆਰਗੈਨਿਕਪੇਜ ਵਿਊਜ਼ ਦੀ ਗਿਣਤੀ ਜਿੰਨੀ ਜ਼ਿਆਦਾ ਹੋਵੇਗੀ, ਓਨਾ ਹੀ ਵਧੇਰੇ 5 ਲੱਖ ਰੁਪਏ ਵਿਚ ਤੁਹਾਡਾ ਸ਼ੇਅਰ ਹੋਵੇਗਾ !</string>
   <string name="blogger_gold_about_text7">ਵਧੇਰੇ ਜਾਣਕਾਰੀ ਲਈ ਇੱਥੇ ਕਲਿੱਕ ਕਰੋ</string>
   <string name="blogger_gold_about_text8">ਹੈ ਨਾ ਬੇਮਿਸਾਲ ਮੌਕਾ ? ਤਾਂ ਫਿਰ, ਤੁਸੀਂ ਕਿਸ ਲਈ ਉਡੀਕ ਕਰ ਰਹੇ ਹੋ?  ਸ਼ੁਰੂ ਕਰੋ, ਬਣਾਓ, ਸ਼ੇਅਰ ਕਰੋ ਅਤੇ ਹੁਣੇ ਕਮਾਓ!</string>
   <string name="lang_sel_express_yourself">ਆਪਣੇ ਆਪ ਨੂੰ 10 ਭਾਸ਼ਾਵਾਂ ਵਿਚ ਪ੍ਰਗਟ ਕਰੋ</string>
@@ -1555,4 +1555,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="coachmark_mymoney">ਕੇਂਪੇਨ ਲਈ ਅਰਜ਼ੀ ਦਿਓ, ਜ਼ਰੂਰਤਾਂ ਪੂਰੀਆਂ ਕਰੋ ਅਤੇ ਪੈਸਾ ਕਮਾਓ!</string>
   <string name="coachmark_vlogs_1">ਆਓ ਤੁਹਾਡਾ ਪਹਿਲਾ ਵੀ-ਲੌਗ ਬਣਾਉਣ ਵਿੱਚ ਤੁਹਾਡੀ ਮਦਦ ਕਰੀਏ! ਸ਼ੁਰੂ ਕਰਨ ਲਈ ਇੱਕ ਚੁਣੌਤੀ ਜਾਂ ਕੈਟੇਗਰੀ ਦੀ ਚੋਣ ਕਰੋ </string>
   <string name="tags_help_discover">ਟੈਗਸ ਦਰਸ਼ਕਾਂ ਨੂੰ ਅਸਾਨੀ ਨਾਲ ਵੀਡੀਓ ਲੱਭਣ ਵਿੱਚ ਸਹਾਇਤਾ ਕਰਦੇ ਹਨ</string>
+  <string name="tooltip_liked_the_blog">ਲੇਖ ਪਸੰਦ ਆਇਆ ? ਕ੍ਰਿਏਟਰ ਨੂੰ ਫੋਲੋ ਕਰੋ ਉਨ੍ਹਾਂ ਦੀਆਂ ਸ਼ਾਨਦਾਰ ਪੋਸਟਾਂ ਨੂੰ ਦੇਖਣ ਲਈ</string>
+  <string name="coachmark_vlogs_2">ਇੱਕ ਚੰਗਾ ਥੰਬਨੇਲ ਵਿਊਜ਼ ਨੂੰ ਵਧਾਉਂਦਾ ਹੈ</string>
+  <string name="tooltip_groups">ਉਨ੍ਹਾਂ ਗ੍ਰੁਪਸ ਵਿੱਚ ਸ਼ਾਮਲ ਹੋਵੋ ਜੋ ਤੁਸੀਂ ਪਸੰਦ ਕਰਦੇ ਹੋ। ਕਮਿਊਨਿਟੀ ਨਾਲ ਗੱਲਬਾਤ ਸ਼ੁਰੂ ਕਰੋ!</string>
 </resources>
