--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1538,4 +1538,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="coachmark_mymoney">കാമ്പെയ്‌നുകൾക്കായി അപേക്ഷിക്കുക, ആവശ്യകതകൾ പൂർത്തിയാക്കുക, പണം സമ്പാദിക്കുക!</string>
   <string name="coachmark_vlogs_1">നിങ്ങളുടെ ആദ്യ വ്ലോഗ് സൃഷ്ടിക്കാൻ ഞങ്ങൾ സഹായിക്കാം! ഒരു വെല്ലുവിളി അല്ലെങ്കിൽ വിഭാഗം തിരഞ്ഞെടുത്ത് ആരംഭിക്കാം.</string>
   <string name="tags_help_discover">വീഡിയോകൾ എളുപ്പത്തിൽ കണ്ടെത്താൻ ടാഗുകൾ കാഴ്ചക്കാരെ സഹായിക്കുന്നു</string>
+  <string name="tooltip_liked_the_blog">ലേഖനം ഇഷ്ടപ്പെട്ടോ? അതിശയകരമായ മറ്റ് പോസ്റ്റുകൾ‌ വിട്ടുപോകാതിരിക്കാൻ സ്രഷ്‌ടാവിനെ പിന്തുടരുക</string>
+  <string name="coachmark_vlogs_2">ഒരു നല്ല ലഘുചിത്രം(Thumbnail  കൂടുതൽ കാഴ്ചക്കാരെ ആകർഷിക്കും</string>
+  <string name="tooltip_groups">നിങ്ങൾ ഇഷ്ടപ്പെടുന്ന ഗ്രൂപ്പുകളിൽ ചേരുക. കമ്മ്യൂണിറ്റിയുമായി സംവദിക്കാൻ ആരംഭിക്കുക!</string>
 </resources>
