--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1445,7 +1445,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="blogger_gold_about_text3">உருவாக்கு - இதுவரை தளத்தில் வலைப்பதிவுகளோ  அல்லது விலாக்களோ  எதுவும் உருவாக்கவில்லை என்றால் இன்றே உருவாக்குங்கள்.</string>
   <string name="blogger_gold_about_text4">பகிர் - அக்டோபர்  10 முதல் நவம்பர் 20 ஆம் தேதி வரை  நீங்கள் படைத்த  வலைப்பதிவுகள்  மற்றும் விலாக்களை உங்கள் உறவினர்கள், நண்பர்கள் மற்றும் சமூக வலைத்தளம் வாயிலாக பகிர்ந்து படைப்பின்  தன்னிச்சையான* பார்வையாளர்கள் எண்ணிக்கையை அதிகரியுங்கள்.  குறிப்பிட்ட நாட்களில் வெளியிடும் பதிவுகள்  மட்டுமல்லாமல் இதற்கு முன்பு  நீங்கள் படைத்த பழைய படைப்புகளையும் பகிரலாம் .</string>
   <string name="blogger_gold_about_text5">ஈட்டு - உங்கள் பதிவுகளினால்  மாம்ஸ்ப்ரெஸ்ஸோ தளத்திற்கு கிடைக்கும் தன்னிச்சையான* பார்வையாளர்கள் எண்ணிக்கைக்கு ஏற்ப 5 லட்ச ரூபாயிலிருந்து  சிறிய பகுதியை  உங்களுடையதாக்கிக் கொள்ளுங்கள்.</string>
-  <string name="blogger_gold_about_text6">It’s that simple. The higher the number of organic views of your blogs/vlogs, the higher YOUR share of the 5 Lakhs you will receive! </string>
+  <string name="blogger_gold_about_text6">சுருக்கக் கூறினால், எவ்வளவு அதிகமாக உங்களது வலைப்பதிவுகளும், விலாகுகளும் தன்னிச்சைப் பார்வைகள் பெறுகிறதோ, அவ்வளவு அதிகமாக  மொத்த சன்மானமான  5 இலட்ச ரூபாயில் இருந்து உங்களுக்கான ஒரு சிறிய  பங்கு கிடைக்கும்!</string>
   <string name="blogger_gold_about_text7">விவரங்களுக்கு படியுங்கள்</string>
   <string name="blogger_gold_about_text8">கொண்டாட்டத்திற்கு தயாராகிவிட்டிர்களா?எதற்காக காத்துக்கொண்டிருக்கிறீர்கள்? இப்போதே படைப்புகளை உருவாக்கி, பகிர்ந்து பணத்தை ஈட்டும் வாய்ப்பினை பயன்படுத்திக்கொள்ளுங்கள்.</string>
   <string name="lang_sel_express_yourself">10 மொழிகளில் வெளிப்படுத்துங்கள்</string>
@@ -1490,4 +1490,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="coachmark_mymoney">பிரச்சாரங்களுக்கு  விண்ணப்பியுங்கள், அதன் தேவைகளை  பூர்த்தி செய்து , பணம் ஈட்டுங்கள்!</string>
   <string name="coachmark_vlogs_1">உங்கள் முதல் விலாக் ஐ உருவாக்க உதவி செய்கிறோம். சவாலை தேர்ந்தெடுத்து  காணொளியை பதிவேற்றுங்கள்( அ ) வகையை தேர்ந்தெடுத்து தொடங்குங்கள்.</string>
   <string name="tags_help_discover">டேக் செய்வதினால் உங்களின் காணொளியை பார்வையாளரிடம் கொண்டு சேர்க்கலாம்</string>
+  <string name="tooltip_liked_the_blog">article பிடித்துள்ளதா? படைப்பாளரின் இதர படைப்புக்களை தவறாமல் பார்க்க அவரை  தொடருங்கள் </string>
+  <string name="coachmark_vlogs_2">நல்லதொரு  படம் பல பார்வையாளரை கவரும் </string>
+  <string name="tooltip_groups">உங்களுக்கு பிடித்தாமான ஆதரவுக்குழுவில் இணைந்து சக தோழிகளோடு உரையாடுங்கள் </string>
 </resources>
